# tabpfn-finetuning

./: .gitignore  README.md  pyproject.toml
exp/debug/0/: events.out.tfevents.1749591715.terra.vla.yp-c.yandex.net.2489311.0  report.json  summary.json
exp/full-finetune/adult/: tuning.toml
exp/full-finetune/california/: tuning.toml
exp/full-finetune/churn/: tuning.toml
exp/full-finetune/classif-cat-medium-0-KDDCup09_upselling/: tuning.toml
exp/full-finetune/classif-cat-medium-1-KDDCup09_upselling/: tuning.toml
exp/full-finetune/classif-cat-medium-2-KDDCup09_upselling/: tuning.toml
exp/full-finetune/classif-num-medium-0-MagicTelescope/: tuning.toml
exp/full-finetune/classif-num-medium-0-bank-marketing/: tuning.toml
exp/full-finetune/classif-num-medium-0-credit/: tuning.toml
exp/full-finetune/classif-num-medium-0-kdd_ipums_la_97-small/: tuning.toml
exp/full-finetune/classif-num-medium-0-phoneme/: tuning.toml
exp/full-finetune/classif-num-medium-0-wine/: tuning.toml
exp/full-finetune/classif-num-medium-1-MagicTelescope/: tuning.toml
exp/full-finetune/classif-num-medium-1-bank-marketing/: tuning.toml
exp/full-finetune/classif-num-medium-1-credit/: tuning.toml
exp/full-finetune/classif-num-medium-1-kdd_ipums_la_97-small/: tuning.toml
exp/full-finetune/classif-num-medium-1-phoneme/: tuning.toml
exp/full-finetune/classif-num-medium-1-wine/: tuning.toml
lib/: __init__.py  data.py  deep.py  env.py  util.py
lib/tabpfn/: __init__.py  base.py  classifier.py  constants.py  inference.py  lora_utils.py  preprocessing.py  regressor.py  utils.py
lib/tabpfn/model/: config.py  (+7 more)
(+964 files in other folders)
