[project]
name = "tabpfn"
version = "0.1.0"
description = "Finetuning TabPFN"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "catboost>=1.2.5",
    "delu>=0.0.26",
    "einops>=0.8.0",
    "jupyter>=1.1.1",
    "kaggle>=1.6.17",
    "loguru>=0.7.3",
    "nbclassic>=1.2.0",
    "numpy>=2.2.2",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "plotnine>=0.14.5",
    "polars>=1.20.0",
    "pudb>=2024.1.3",
    "pyarrow>=19.0.0",
    "pytest>=8.3.4",
    "rtdl-num-embeddings>=0.0.11",
    "rtdl-revisiting-models>=0.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tensorboard>=2.18.0",
    "tensordict>=0.6.2",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "tqdm>=4.67.1",
    "xgboost>=2.1.3",
    "setuptools<=75.8.0",
    "loralib>=0.1.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
cpu = [
  "torch<=2.5",
]
cu124 = [
  "torch<=2.5",
  "triton==3.1.0",
]


[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu124" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
triton = [
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
